--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Advice normalize copy.css">
-    <link rel="stylesheet" href="Advice main copy.css">
+    <link rel="stylesheet" href="esteban-s.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Lora:wght@400;600;700&family=Poppins:wght@300;500&family=Source+Sans+Pro:wght@200;300&display=swap" 
