--- a/esteban-s-advice.html
+++ b/esteban-s-advice.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Advice normalize copy.css">
+    <!--<link rel="stylesheet" href="Advice normalize copy.css"> -->
     <link rel="stylesheet" href="esteban-s.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Lora:wght@400;600;700&family=Poppins:wght@300;500&family=Source+Sans+Pro:wght@200;300&display=swap" 
@@ -19,7 +20,7 @@
 <body>
     <header class="homepage-hero">
         <div class="head-wrapper"> 
-            <h1><a href="index.html" target="_blank"> < < Back to Main</a></h1>
+            <h1><a href="../index-2.html" target="_blank"> < < Back to Main</a></h1>
            <!--- <nav>
                 <ul>
                     <li><a href="#about">about</a></li>
@@ -92,7 +93,7 @@
     <footer id="contact">
         <div class="content-wrapper">
             <div class="stuck-image">
-                <img id="stuck-picture" src="Pictures/Feeling stuck.png"
+                <img id="stuck-picture" src="pictures/feeling-stuck.png"
                     alt="Child laying down inside of a playground tunnel">
             </div>
             <div class="help-info">
@@ -105,7 +106,7 @@
 
             <div class="slack">
                 <a class="together" href="https://slack.com/" target="_blank">
-                    <img src="Pictures/Slack portal.png" alt="Slack icon" id="slack-portal">
+                    <img src="pictures/slack-portal.png" alt="Slack icon" id="slack-portal">
                     <strong>portal</strong>
                 </a>
             </div>
