Created a css directory

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <!--<link rel="stylesheet" href="Advice normalize copy.css"> -->
-        <link rel="stylesheet" href="esteban-s.css">
+        <link rel="stylesheet" href="css/esteban-s.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
         <link rel="stylesheet" type="text/css" href="advice-normalize-copy.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
